--- a/src/includes/head.html
+++ b/src/includes/head.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8">
   <title>@@pagename - Home</title>
   <link rel="stylesheet" media="all" href="css/main.css">
+  <link rel="stylesheet" href="../src/bower_components/colorbox/example1/colorbox.css" />
   <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <script>document.documentElement.className = document.documentElement.className.replace(/(\s|^)no-js(\s|$)/, '');</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="../src/bower_components/colorbox/jquery.colorbox.js"></script>
 </head>
