--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -1,5 +1,5 @@
 <aside class="sidebar">
-  <div class="section">
+  <div class="section section-width">
     <div class="section-title">FOLLOW US</div>
     <div class="section-content section-links">
       <ul>
@@ -9,7 +9,7 @@
       </ul>
     </div>
   </div>
-  <div class="section">
+  <div class="section section-width">
     <div class="section-title">RANDOMLY SELECTED</div>
     <div class="section-content section-items">
       <ul>
@@ -21,7 +21,7 @@
       </ul>
     </div>
   </div>
-  <div class="section">
+  <div class="section section-width">
     <div class="section-title">WHERE YOU CAN FIND US?</div>
     <div class="section-content">
         <span class="bold">X-Plosion Ltd.</span><br> 
