PNG files with .gitattributes

--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -3,9 +3,9 @@
     <div class="section-title">FOLLOW US</div>
     <div class="section-content section-links">
       <ul>
-        <li><a href="#"><img src="img/home/fb.gif" alt="">Facebook</a></li>
-        <li><a href="#"><img src="img/home/tw.gif" alt="">Twitter</a></li>
-        <li><a href="#"><img src="img/home/gp.gif" alt="">Google+</a></li>
+        <li><a href="#"><img src="img/home/fb.png" alt="">Facebook</a></li>
+        <li><a href="#"><img src="img/home/tw.png" alt="">Twitter</a></li>
+        <li><a href="#"><img src="img/home/gp.png" alt="">Google+</a></li>
       </ul>
     </div>
   </div>
